--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
                 <div class="header-item">About</div>
                 <div class="header-item">Contact</div>
             </div>
-            <div class="button">
-                <div class="button-text">View My Work</div>
-            </div>
+            <a href="about.html" class="btn-container">
+                <div class="button">
+                    <div class="button-text">View My Work</div>
+                </div>
+                <div class="button blue"></div>
+                <div class="button pink"></div>
+            </a>
+            
         </div>
     </div>
 
