styling + about, contact pages
added styling and links to the about and contact page

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/ajq4kqt.css">
     <link rel="stylesheet" href="./styles/main.css">
-    <title>Document</title>
+    <title>Alex Stewart | Design & Development</title>
 </head>
 <body>
     <div class="banner">
         <div class="banner-header">
             <object data="./images/logo.svg"></object>
             <div class="header-text">alex.stewart</div>
-            <div>Site under construction</div>
             <div class="row">
-                <div class="header-item">Projects</div>
-                <div class="header-item">About</div>
-                <div class="header-item">Contact</div>
+                <a href="#projects" class="header-item">Projects</a>
+                <a href="about.html" class="header-item">About</a>
+                <a href="contact.html" class="header-item">Contact</a>
             </div>
-            <a href="about.html" class="btn-container">
+            <a href="#projects" class="btn-container">
                 <div class="button">
                     <div class="button-text">View My Work</div>
                 </div>
@@ -32,7 +31,7 @@
     <div class="container light-background">
         <div class="content">
             <div class="row">
-                <div class="header header-item">Projects</div>
+                <div id="projects" class="header header-item">Projects</div>
                 <div class="header-item">Projects</div>
                 <div class="header-item">About</div>
                 <div class="header-item">Contact</div>
