add portfolio items, styling, start about page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="header-text">alex.stewart</div>
             <div class="row">
                 <a href="#projects" class="header-item">Projects</a>
-                <a href="about.html" class="header-item">About</a>
-                <a href="contact.html" class="header-item">Contact</a>
+                <a href="about" class="header-item">About</a>
+                <a href="contact" class="header-item">Contact</a>
             </div>
             <a href="#projects" class="btn-container">
                 <div class="button">
@@ -28,13 +28,79 @@
         </div>
     </div>
 
-    <div class="container light-background">
+    <div class="container white-background">
         <div class="content">
-            <div class="row">
+            <div class="row row-break">
                 <div id="projects" class="header header-item">Projects</div>
-                <div class="header-item">Projects</div>
-                <div class="header-item">About</div>
-                <div class="header-item">Contact</div>
+                <div class="tab-group">
+                    <div class="header-item tab-header" id="0">Animation</div>
+                    <div class="header-item tab-header" id="1">Graphic Design</div>
+                    <div class="header-item tab-header" id="2">Web Development</div>
+                </div>
+            </div>
+            <div class="tab-container" id="tab-0">
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/banner.png" alt="">
+                    <div class="portfolio-main">
+                        <h2>Fighting Infections With Phages</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">Cinema 4D</div>
+                            <div class="portfolio-tag">Adobe After Effects</div>
+                            <div class="portfolio-tag">ZBrush</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Animation I created for the National Institute of Allergy and Infectious Diseases, 
+                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
+                            Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
+                        </div>
+                        <div class="row row-break">
+                            <a href="#" class="btn-container">
+                                <div class="button purple">
+                                    <div class="button-text">View Case Study</div>
+                                </div>
+                                <div class="button blue"></div>
+                                <div class="button pink"></div>
+                            </a>
+                            <a href="https://youtu.be/NWo4MwE3zfU?t=23" class="btn-container">
+                                <div class="button purple">
+                                    <div class="button-text">Watch Video</div>
+                                </div>
+                                <div class="button blue"></div>
+                                <div class="button pink"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="portfolio-image"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/tick.jpg" alt="">
+                    <div class="portfolio-main">
+                        <h2>Tick Animation</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">Cinema 4D</div>
+                            <div class="portfolio-tag">ZBrush</div>
+                            <div class="portfolio-tag">Substance Painter</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Animation I created for the National Institute of Allergy and Infectious Diseases, 
+                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
+                            Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
+                        </div>
+                        <div class="row row-break">
+                            <a href="#" class="btn-container">
+                                <div class="button purple">
+                                    <div class="button-text">View Case Study</div>
+                                </div>
+                                <div class="button blue"></div>
+                                <div class="button pink"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/tick.jpg'); background-position: 50%;"></div>
+                </div>
             </div>
         </div>
     </div>
