--- a/about.html
+++ b/about.html
@@ -15,6 +15,33 @@
         <a class="nav-item active">About</a>
         <a href="contact" class="nav-item">Contact</a>
     </div>
+
+    <div class="container">
+        <div class="content">
+            <div class="row break-small" style="align-items: center;">
+                <object class="logo-header" data="./images/logo.svg"></object>
+                <div>
+                    <h2>alex.stewart</h2>
+                    <p>
+                        I am a graphic designer, animator and web developer. My passion is creating and developing clean 
+                        and modern designs and compositions, whether that is building front end user interfaces for ecommerce 
+                        websites or designing interesting compositions for 3D medical animations.
+                    </p>
+
+                    <p>
+                        In my free time I like to create art through digital painting or traditional fine art drawing. 
+                    </p>
+                    <p>
+                        I also love to ski in the winter, raft and hike in the summer, and fail at pub trivia every Tuesday evening.
+                    </p>
+                </div>
+            </div>
+            <div class="row row-break" style="align-items: center; justify-content: center;">
+                <img src="./images/ruby.png" alt="" style="max-width:400px; padding: 20px;">
+                <img src="./images/rafting.jpg" alt="" style="max-width:460px; padding: 20px;">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
