--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
                 <object class="logo-header" data="./images/logo.svg"></object>
                 <div>
                     <h2>Contact me at:</h2>
-                    <p>alexdostew@outlook.com</p>
+                    <a href="mailto:alexdostew@outlook.com">alexdostew@outlook.com</a>
                     <p>LinkedIn</p>
                 </div>
             </div>
