--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 
             <div class="tab-container" id="tab-1"  style="display: none;">
                 <div class="portfolio-item">
-                    <img class="portfolio-image-small" src="images/banner.png" alt="">
+                    <img class="portfolio-image-small" src="images/dclogo.jpg" alt="">
                     <div class="portfolio-main">
-                        <h2>Graphic Design Stuff</h2>
+                        <h2>Digital Circle Brand Identity</h2>
                         <div class="row row-break">
-                            <div class="portfolio-tag">Cinema 4D</div>
-                            <div class="portfolio-tag">Adobe After Effects</div>
-                            <div class="portfolio-tag">ZBrush</div>
+                            <div class="portfolio-tag">Adobe Illustrator</div>
+                            <div class="portfolio-tag">Adobe InDesign</div>
+                            <div class="portfolio-tag">Adobe PhotoShop</div>
                         </div>
                         <hr>
                         <div class="portfolio-item-content">
@@ -103,47 +103,67 @@
                             featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
                             Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
                         </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/dclogo.jpg'); background-position: center;"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/muscleup.jpg" alt="">
+                    <div class="portfolio-main">
+                        <h2>Muscle Up</h2>
                         <div class="row row-break">
-                            <a href="https://youtu.be/NWo4MwE3zfU?t=23" class="btn-container">
-                                <div class="button purple">
-                                    <div class="button-text">Watch Video</div>
-                                </div>
-                                <div class="button blue"></div>
-                                <div class="button pink"></div>
-                            </a>
+                            <div class="portfolio-tag">Adobe Illustrator</div>
+                            <div class="portfolio-tag">Adobe InDesign</div>
+                            <div class="portfolio-tag">Adobe PhotoShop</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Animation I created for the National Institute of Allergy and Infectious Diseases, 
+                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
+                            Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
                         </div>
                     </div>
-                    <div class="portfolio-image"></div>
+                    <div class="portfolio-image" style="background-image: url('./images/muscleup.jpg');"></div>
                 </div>
             </div>
 
             <div class="tab-container" id="tab-2" style="display: none;">
                 <div class="portfolio-item">
-                    <img class="portfolio-image-small" src="images/banner.png" alt="">
+                    <img class="portfolio-image-small" src="images/chameleons.jpg" alt="">
                     <div class="portfolio-main">
                         <h2>Brian's Chameleons</h2>
                         <div class="row row-break">
-                            <div class="portfolio-tag">Cinema 4D</div>
-                            <div class="portfolio-tag">Adobe After Effects</div>
-                            <div class="portfolio-tag">ZBrush</div>
+                            <div class="portfolio-tag">AngularJS</div>
+                            <div class="portfolio-tag">Node.js</div>
+                            <div class="portfolio-tag">Express.js</div>
                         </div>
                         <hr>
                         <div class="portfolio-item-content">
-                            Animation I created for the National Institute of Allergy and Infectious Diseases, 
-                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
-                            Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
-                        </div>
-                        <div class="row row-break">
-                            <a href="https://youtu.be/NWo4MwE3zfU?t=23" class="btn-container">
-                                <div class="button purple">
-                                    <div class="button-text">Watch Video</div>
-                                </div>
-                                <div class="button blue"></div>
-                                <div class="button pink"></div>
-                            </a>
+                            Brian’s Chameleons is an e-commerce website I am designing and developing for a client who originally 
+                            operated only through Facebook. The client wanted a website to list their available chameleons, as well 
+                            as a place to showcase past and upcoming chameleons with a list of their genealogy. The goal was to create a clean and modern 
+                            e-commerce application that would stand out from the competition and be easy to understand and use.
                         </div>
                     </div>
-                    <div class="portfolio-image"></div>
+                    <div class="portfolio-image" style="background-image: url('./images/chameleons.jpg'); background-position: 0%;"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/gallery.jpg" alt="">
+                    <div class="portfolio-main">
+                        <h2>Image Gallery</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">.NET</div>
+                            <div class="portfolio-tag">HTML</div>
+                            <div class="portfolio-tag">CSS</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Conceptual image gallery that included a functioning login system where users could upload images with descriptions
+                            and leave comments on other user's images.
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/gallery.jpg'); background-position: center;"></div>
                 </div>
             </div>
         </div>
