--- a/index.html
+++ b/index.html
@@ -99,9 +99,7 @@
                         </div>
                         <hr>
                         <div class="portfolio-item-content">
-                            Animation I created for the National Institute of Allergy and Infectious Diseases, 
-                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
-                            Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
+                            Created a full brand identity for Digital Circle, a company I created that specializes in graphic design and web development.
                         </div>
                     </div>
                     <div class="portfolio-image" style="background-image: url('./images/dclogo.jpg'); background-position: center;"></div>
@@ -110,7 +108,7 @@
                 <div class="portfolio-item">
                     <img class="portfolio-image-small" src="images/muscleup.jpg" alt="">
                     <div class="portfolio-main">
-                        <h2>Muscle Up</h2>
+                        <h2>Muscle Up Brand Identity</h2>
                         <div class="row row-break">
                             <div class="portfolio-tag">Adobe Illustrator</div>
                             <div class="portfolio-tag">Adobe InDesign</div>
@@ -118,9 +116,8 @@
                         </div>
                         <hr>
                         <div class="portfolio-item-content">
-                            Animation I created for the National Institute of Allergy and Infectious Diseases, 
-                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
-                            Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
+                            Conceptual graphic design project for a beverage brand focused on fitness. Created a full brand identity including
+                            logo variations, color palette, typography and style guide.
                         </div>
                     </div>
                     <div class="portfolio-image" style="background-image: url('./images/muscleup.jpg');"></div>
