--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="projects" class="header header-item">Projects</div>
                 <div class="tab-group">
                     <div class="header-item tab-header active" onclick="changeTab(this.id)" id="0">Animation</div>
-                    <div class="header-item tab-header" onclick="changeTab(this.id)" id="1">Graphic Design</div>
+                    <div class="header-item tab-header" onclick="changeTab(this.id)" id="1">Graphic Design & Illustration</div>
                     <div class="header-item tab-header" onclick="changeTab(this.id)" id="2">Web Development</div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                         <hr>
                         <div class="portfolio-item-content">
                             Animation I created for the National Institute of Allergy and Infectious Diseases, 
-                            featured on CNN and the NIAID YouTube channel. I created the models, textures and animations. 
+                            featured on CNN and the <a href="https://youtu.be/NWo4MwE3zfU?t=23" style="color:#ff5eff;">NIAID YouTube channel</a>. I created the models, textures and animations. 
                             Applications used were Cinema4D, ZBrush, Substance Painter and Adobe After Effects.
                         </div>
                         <div class="row row-break">
@@ -84,6 +84,58 @@
                         </div>
                     </div>
                     <div class="portfolio-image" style="background-image: url('./images/tick.jpg'); background-position: 50%;"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/clouds.png" alt="">
+                    <div class="portfolio-main">
+                        <h2>Life in the Clouds</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">Adobe Photoshop</div>
+                            <div class="portfolio-tag">Adobe After Effects</div>
+                            <div class="portfolio-tag">Adobe Premiere</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            2D animation I created in Adobe Photoshop, After Effects and Premiere. This animation was hand drawn frame by frame.
+                        </div>
+                        <div class="row row-break">
+                            <a href="https://www.youtube.com/watch?v=XnDFEIHHMoQ" class="btn-container">
+                                <div class="button purple">
+                                    <div class="button-text">Watch Video</div>
+                                </div>
+                                <div class="button blue"></div>
+                                <div class="button pink"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/clouds.png'); background-position: center;"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/IMG_1721.jpg" alt="">
+                    <div class="portfolio-main">
+                        <h2>Alien</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">Clay</div>
+                            <div class="portfolio-tag">Adobe After Effects</div>
+                            <div class="portfolio-tag">Adobe Premiere</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Claymation project I created. Along with trying out claymation, my goal was to experiment with practical effects, lighting and shot compositions.
+                        </div>
+                        <div class="row row-break">
+                            <a href="https://www.youtube.com/watch?v=Dzmji7czl0s" class="btn-container">
+                                <div class="button purple">
+                                    <div class="button-text">Watch Video</div>
+                                </div>
+                                <div class="button blue"></div>
+                                <div class="button pink"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/IMG_1721.jpg'); background-position: center;"></div>
                 </div>
             </div>
 
@@ -122,6 +174,52 @@
                     </div>
                     <div class="portfolio-image" style="background-image: url('./images/muscleup.jpg');"></div>
                 </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/UMTelemark.png" alt="">
+                    <div class="portfolio-main">
+                        <h2>UM Telemark Ski Club Logo</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">Paper & Pencil</div>
+                            <div class="portfolio-tag">Adobe Photoshop</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Logo I created for the University of Montana Telemark Ski Club. Initially sketched on paper, I uploaded the image to photoshop to add color and other graphic elements.
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/UMTelemark.png');"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/ruby.png" alt="">
+                    <div class="portfolio-main">
+                        <h2>Digital Painting of Ruby</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">Adobe Photoshop</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Digital painting of my dog Ruby. Painted entirely in photoshop, starting with a base sketch and working up to full color.
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/ruby.png');"></div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img class="portfolio-image-small" src="images/foot.jpg" alt="">
+                    <div class="portfolio-main">
+                        <h2>Drawing of a Foot</h2>
+                        <div class="row row-break">
+                            <div class="portfolio-tag">2H, B, 2B Graphite Pencils</div>
+                        </div>
+                        <hr>
+                        <div class="portfolio-item-content">
+                            Drawing I made of a foot using a photo reference of a cast foot. Made during my time taking classes at the Missoula Fine Art Studio.
+                        </div>
+                    </div>
+                    <div class="portfolio-image" style="background-image: url('./images/foot.jpg'); background-position: center; background-size:contain;"></div>
+                </div>
             </div>
 
             <div class="tab-container" id="tab-2" style="display: none;">
@@ -151,8 +249,7 @@
                         <h2>Image Gallery</h2>
                         <div class="row row-break">
                             <div class="portfolio-tag">.NET</div>
-                            <div class="portfolio-tag">HTML</div>
-                            <div class="portfolio-tag">CSS</div>
+                            <div class="portfolio-tag">C#</div>
                         </div>
                         <hr>
                         <div class="portfolio-item-content">
