--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                             e-commerce application that would stand out from the competition and be easy to understand and use.
                         </div>
                     </div>
-                    <div class="portfolio-image" style="background-image: url('./images/chameleons.jpg'); background-position: 0%;"></div>
+                    <div class="portfolio-image" style="background-image: url('./images/chameleons.jpg'); background-position: 0%; background-size: contain; background-repeat: no-repeat; background-color: black;"></div>
                 </div>
 
                 <div class="portfolio-item">
