add images, update position

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="portfolio-image" style="background-image: url('./images/IMG_1721.jpg'); background-position: center;"></div>
+                    <div class="portfolio-image" style="background-image: url('./images/IMG_1721.jpg'); background-position: 100%;"></div>
                 </div>
             </div>
 
@@ -188,7 +188,7 @@
                             Logo I created for the University of Montana Telemark Ski Club. Initially sketched on paper, I uploaded the image to photoshop to add color and other graphic elements.
                         </div>
                     </div>
-                    <div class="portfolio-image" style="background-image: url('./images/UMTelemark.png');"></div>
+                    <div class="portfolio-image" style="background-image: url('./images/UMTelemark.png'); background-position: center;"></div>
                 </div>
 
                 <div class="portfolio-item">
